@@ -171,7 +171,7 @@ synchronized-clause:			ok
 top-level-occurs-clause:		ok
 value-of-clause:			obsolete
 numeric-boolean:			unconformable
-hexadecimal-boolean:		unconformable
+hexadecimal-boolean:			unconformable
 national-literals:			unconformable
 hexadecimal-national-literals:		unconformable
 acucobol-literals:			unconformable
@@ -179,11 +179,12 @@ word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
-constant-01:		unconformable		# 01 AS CONSTANT items are allowed
-constant-78:		ok					# 78 items are allowed
+constant-01:				unconformable	# 01 AS CONSTANT items are allowed
+constant-78:				ok		# 78 items are allowed
 program-prototypes:			unconformable
 reference-out-of-declaratives:		warning  # not verified yet
 numeric-value-for-edited-item:		error
+incorrect-conf-sec-order:		error
 
 # If yes, all the reserved words must be specified in a list of reserved:
 # entries; the default reserved word list will not be used.
