@@ -178,11 +178,12 @@ word-continuation:			archaic
 not-exception-before-exception:		ok
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
-constant-01:		ok					# 01 AS CONSTANT items are allowed
-constant-78:		unconformable		# 78 items are allowed
+constant-01:				ok		# 01 AS CONSTANT items are allowed
+constant-78:				unconformable	# 78 items are allowed
 program-prototypes:			ok
 reference-out-of-declaratives:		error
 numeric-value-for-edited-item:		error
+incorrect-conf-sec-order:		error
 
 # archaic in COBOL2002 and currently not available as dialect features:
 # 1: MOVE of alphanumeric figurative constants to numeric items
