@@ -172,17 +172,18 @@ value-of-clause:			unconformable
 numeric-boolean:			ok
 hexadecimal-boolean:			ok
 national-literals:			ok
-hexadecimal-national-literals:			ok
+hexadecimal-national-literals:		ok
 acucobol-literals:			unconformable
 word-continuation:			archaic
 not-exception-before-exception:		ok
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
-constant-01:		ok					# 01 AS CONSTANT items are allowed
-constant-78:		unconformable		# 78 items are allowed
+constant-01:				ok		# 01 AS CONSTANT items are allowed
+constant-78:				unconformable	# 78 items are allowed
 program-prototypes:			ok
 reference-out-of-declaratives:		error
 numeric-value-for-edited-item:		error
+incorrect-conf-sec-order:		error
 
 # If yes, all the reserved words must be specified in a list of reserved:
 # entries; the default reserved word list will not be used.
