@@ -178,11 +178,12 @@ word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
-constant-01:		unconformable		# 01 AS CONSTANT items are allowed
-constant-78:		unconformable		# 78 items are allowed
+constant-01:				unconformable	# 01 AS CONSTANT items are allowed
+constant-78:				unconformable	# 78 items are allowed
 program-prototypes:			unconformable
 reference-out-of-declaratives:		error  # not verified yet
 numeric-value-for-edited-item:		error
+incorrect-conf-sec-order:		error
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
