@@ -187,11 +187,12 @@ word-continuation:			warning
 not-exception-before-exception:		ok
 accept-display-extensions:		ok
 renames-uncommon-levels:		ok
-constant-01:		ok			# 01 AS CONSTANT items are allowed
-constant-78:		ok			# 78 items are allowed
+constant-01:				ok	# 01 AS CONSTANT items are allowed
+constant-78:				ok	# 78 items are allowed
 program-prototypes:			ok
 reference-out-of-declaratives:		warning
 numeric-value-for-edited-item:		ok
+incorrect-conf-sec-order:		warning
 
 # If yes, all the reserved words must be specified in a list of reserved:
 # entries; the default reserved word list will not be used.
