@@ -181,11 +181,12 @@ word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
 renames-uncommon-levels:		ok
-constant-01:		unconformable		# 01 AS CONSTANT items are allowed
-constant-78:		ok			# 78 items are allowed
+constant-01:				unconformable	# 01 AS CONSTANT items are allowed
+constant-78:				ok		# 78 items are allowed
 program-prototypes:			ok
 reference-out-of-declaratives:		warning  # not verified yet
 numeric-value-for-edited-item:		error
+incorrect-conf-sec-order:		error
 
 # If yes, all the reserved words must be specified in a list of reserved:
 # entries; the default reserved word list will not be used.
