@@ -190,6 +190,7 @@ constant-78:				ok
 program-prototypes:			unconformable
 reference-out-of-declaratives:		error  # check error when referring to non-USE-statement DECLARATIVE sections
 numeric-value-for-edited-item:		error
+incorrect-conf-sec-order:		error
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
