@@ -1,4 +1,8 @@
 
+2017-06-05  Edward Hart <edward.dan.hart@gmail.com>
+
+	* general: added incorrect-conf-sec-order option.
+
 2017-06-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* general: renamed eject-statement to listing-statements,
